--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ a:visited{
 /* Color contrast checked via https://webaim.org/resources/contrastchecker/ */
 a:hover,
 a:focus{
-	color: #7C2E27;
+	color: #384770;
 	background-color: #E3E3E3; 
 }
 #skiptocontent a{
@@ -24,12 +24,17 @@ a:focus{
 	color: #fff;
 }
 .carousel .carousel-item .carousel-caption a{
-	background-color: black; /*rgba(0, 0, 0, 0.65)*/
+	background-color: rgba(0, 0, 0, 0.65);
 }
 .carousel .carousel-item .carousel-caption a:hover,
 .carousel .carousel-item .carousel-caption a:focus{
-	color: #7C2E27;
-	background-color: #E3E3E3; /*rgba(0, 0, 0, 1)*/
+	background-color: rgba(0, 0, 0, 1);
+	border-color: rgba(0, 0, 0, 1);
+}
+.carousel .carousel-item .carousel-caption a:focus{
+    box-shadow: inset 0px 0px 0px 2px #fff;
+	-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
+    -moz-box-shadow: inset 0px 0px 0px 2px #fff;
 }
 
 /* CSS Main File adapted from One More Voice (https://onemorevoice.org/) */
@@ -58,9 +63,12 @@ Table of Contents
 /*--------------------------------------*/
 
 /** Main Site Colors **/
-/* Colors chosen to be Color Blind Safe using https://color.adobe.com/create/color-accessibility */
-/* Triad */
+/* Colors chosen to be Color Blind Safe using https://color.adobe.com/create/color-accessibility */ /* Triad */
+/* As relevant, color contrast checked via https://webaim.org/resources/contrastchecker/ */
 /*
+Black: rgba(0, 0, 0, 1);
+Black-Gray: rgba(0, 0, 0, 0.65);
+Blue-Black: #384770;
 Dark Blue: #495F7A;
 Light Blue: #3185EB;
 Dark Red: #7C2E27;
@@ -460,8 +468,8 @@ a:focus img{
 	text-align: center;
 	line-height: 1.6em;
 	padding: 20px 0;
-	right: .3em;
-	left: .3em;
+	/* right: .3em;
+	left: .3em; */
 	bottom: -25px;
 	position: absolute;
 }
