--- a/css/style-for-dev.css
+++ b/css/style-for-dev.css
@@ -1,7 +1,7 @@
 h1,
 h2,
 h3{
-	color: #20589D;
+	color: #1C4C87;
 }
 #skiptocontent a{
 	color: white;
@@ -76,7 +76,7 @@ Table of Contents
 /*
 Black: rgba(0, 0, 0, 1);
 Black-Gray: rgba(0, 0, 0, 0.65);
-Dark Blue: #20589D;
+Dark Blue: #1C4C87;
 Light Blue: #1157AC;
 Gray: #E3E3E3;
 */
