--- a/css/style-for-dev.css
+++ b/css/style-for-dev.css
@@ -320,7 +320,8 @@ a:focus img{
     src: url('../fonts/notoserif-bold-webfont.woff2') format('woff2'),
          url('../fonts/notoserif-bold-webfont.woff') format('woff');
     font-weight: normal;
-    font-style: normal;
+	font-style: normal;
+	font-display: block;
 }
 
 
