--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ h3{
 }
 @media only screen and (min-width: 320px){
 	.header-title {
-		padding: .2em 0;
+		padding: .2em 0 0 0;
 	}
 }
 .organizers{
@@ -562,11 +562,18 @@ ul{
 	}
 }
 .announcement ol{
-    text-align: left;
-    display: inline-block;
+	list-style: none;
+	text-align: center;
+	display: block;
+	padding: 0;
+	margin: 0 0 2em 0;
 }
 .announcement li{
-	line-height: 2.1em;
+	font-size: 1.1em;
+	line-height: 2em;
+	display: inline-block;
+	margin: 0 1em;
+	font-weight: 300;
 }
 
 /* Unused Code */
