--- a/css/style.css
+++ b/css/style.css
@@ -179,13 +179,17 @@ h3{
 	text-align: left;
 	display: inline-block;
 }
-img,
-.image{
+img{
 	font-weight: 300;
 	margin-left: auto;
 	margin-right: auto;
 	width: 100%;
 	display: inline-block;
+}
+#upcoming img{
+	width: 90%;
+	display: block;
+	margin-bottom: 2em;
 }
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #skiptocontent a{
