--- a/css/style.css
+++ b/css/style.css
@@ -183,7 +183,8 @@ img{
 	width: 100%;
 	display: inline-block;
 }
-#upcoming img{
+#upcoming img,
+#call img{
 	width: 90%;
 	display: block;
 	margin-bottom: 2em;
