--- a/css/style.css
+++ b/css/style.css
@@ -184,9 +184,12 @@ img{
 }
 #upcoming img,
 #call img{
-	width: 90%;
+	width: 100%;
 	display: block;
 	margin-bottom: 2em;
+}
+@media only screen and (min-width: 768px){
+	width: 90%;
 }
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #skiptocontent a{
