--- a/css/style.css
+++ b/css/style.css
@@ -147,11 +147,11 @@ h3{
 }
 @media only screen and (min-width: 992px){
 	.title{
-		padding: 1em 0;
+		padding: 1em 0 0 0;
 		display: block !important; /* Tied to overlay */
 	}
 }
-.announcement{
+.main-menu{
 	font-size: .9em;
 	text-align: center;
 }
@@ -584,14 +584,14 @@ ul{
 		padding-left: 2.4em;
 	}
 }
-.announcement ol{
+.main-menu ol{
 	text-align: center;
 	list-style: none;
 	margin: 0 0 2em 0;
 	padding: 0;
 	display: block;
 }
-.announcement li{
+.main-menu li{
 	font-size: 1.1em;
 	font-weight: 300;
 	line-height: 2em;
