--- a/css/style.css
+++ b/css/style.css
@@ -375,65 +375,82 @@ a:focus img{
 		max-height: 432px;
 	}
 }
-/* Carousel caption */
-.carousel .carousel-item .carousel-caption a{
-	text-decoration: underline;
-	background-color: rgba(0, 0, 0, 0.65); /*color*/
+/* Carousel caption (also regular images) */
+.carousel .carousel-item .carousel-caption,
+.image-caption{
+	text-align: center;
+	line-height: 1.2em;
+	padding: 0;
+	right: 0;
+	left: 0;
+	bottom: .4em;
+	position: absolute;
 }
-.carousel .carousel-item .carousel-caption a{
-	border: 2px solid transparent;
-	border-radius: 5px;
-	margin: 0;
-	padding: 0 6px;
-	display: inline-block;
+@media only screen and (min-width: 480px){
+	.carousel .carousel-item .carousel-caption,
+	.image-caption{
+		line-height: 1.6em;
+		bottom: .5em;
+	}
 }
-.carousel .carousel-item .carousel-caption a:hover,
-.carousel .carousel-item .carousel-caption a:focus{
-	background-color: #1157AC; /*color*/
-	margin: 0;
+@media only screen and (min-width: 768px){
+	.carousel .carousel-item .carousel-caption,
+	.image-caption{
+		right: .5em;
+		left: unset;
+		bottom: .5em;
+	}
 }
-.carousel .carousel-item .carousel-caption a:focus{
-	border-color: #1157AC; /*color*/
-	box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
-	-webkit-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
-    -moz-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
-}
-.carousel .carousel-item .carousel-caption h3{
+.carousel .carousel-item .carousel-caption h3,
+.image-caption h3{
 	font-size: .8em;
 	font-family: 'noto_serifregular';
 	font-weight: 300;
-	font-style: normal;
-	text-align: unset;
+	padding: 0;
+	margin: 0;
+	display: inline-block;
 }
 @media only screen and (min-width: 320px){
-	.carousel .carousel-item .carousel-caption h3{
+	.carousel .carousel-item .carousel-caption h3,
+	.image-caption h3{
 		font-size: inherit;
 		line-height: inherit;
 	}
 }
-.carousel .carousel-item .carousel-caption h3 a{
-	font-size: .9em;
+.carousel .carousel-item .carousel-caption h3 a,
+.image-caption h3 a{
+	font-size: .75em;
 	color: #fff; /*color*/
-	text-align: center;
-}
-.carousel .carousel-item .carousel-caption{
-	text-align: center;
-	line-height: 1.2em;
-	padding: 20px 0;
-	right: 6px;
-	left: 6px;
-	bottom: -25px;
-	position: absolute;
-}
-@media only screen and (min-width: 480px){
-	.carousel .carousel-item .carousel-caption{
-		line-height: 1.6em;
-	}
 }
 @media only screen and (min-width: 768px){
-	.carousel .carousel-item .carousel-caption{
-		left: unset;
+	.image-caption h3 a,
+	.carousel .carousel-item .carousel-caption h3 a{
+		font-size: .85em;
 	}
+}
+.carousel .carousel-item .carousel-caption a,
+.image-caption a{
+	text-decoration: underline;
+	background-color: rgba(0, 0, 0, 0.65); /*color*/
+	border: 2px solid transparent;
+	border-radius: 5px;
+	margin: 0;
+	padding: 1px 6px;
+	display: inline-block;
+}
+.carousel .carousel-item .carousel-caption a:hover,
+.carousel .carousel-item .carousel-caption a:focus,
+.image-caption a:hover,
+.image-caption a:focus{
+	background-color: #1157AC; /*color*/
+	margin: 0;
+}
+.carousel .carousel-item .carousel-caption a:focus,
+.image-caption a:focus{
+	border-color: #1157AC; /*color*/
+	box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
+	-webkit-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
+    -moz-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
 }
 /* Shared CSS for Pause, Next and Previous Slide Controls */
 .carousel .controls button{
