update style css

--- a/css/style.css
+++ b/css/style.css
@@ -606,20 +606,46 @@ ul{
 		padding-left: 2.4em;
 	}
 }
+/********/
+
+
 .main-menu ol{
 	text-align: center;
 	list-style: none;
-	margin: 0 0 2em 0;
 	padding: 0;
-	display: block;
+	display: inline-flex;
+	/* display: inline-grid;
+	grid-template-columns: repeat(1, 1fr); */
+}
+@media (min-width: 320px){
+	.main-menu ol {
+	  /* grid-template-columns: repeat(1, 1fr); */
+	}
+  }
+@media (min-width: 480px){
+	.main-menu ol {
+	  /* grid-template-columns: repeat(3, 1fr); */
+	}
+  }
+@media (min-width: 992px){
+	.main-menu ol {
+	  /* grid-template-columns: repeat(6, 1fr); */
+	}
 }
 .main-menu li{
 	font-size: 1.1em;
-	font-weight: 300;
-	line-height: 2em;
 	margin: 0 1em;
-	display: inline-block;	
 }
+nav.main-menu{
+	margin: 0 auto;
+}
+@media (min-width: 992px){
+	nav.main-menu{
+		max-width: 90%;
+}
+
+
+/********/
 #upcoming > ul{
 	list-style: none
 }
