--- a/css/style-for-dev.css
+++ b/css/style-for-dev.css
@@ -147,11 +147,11 @@ h3{
 }
 @media only screen and (min-width: 992px){
 	.title{
-		padding: 1em 0;
+		padding: 1em 0 0 0;
 		display: block !important; /* Tied to overlay */
 	}
 }
-.announcement{
+.main-menu{
 	font-size: .9em;
 	text-align: center;
 }
@@ -184,10 +184,11 @@ img{
 }
 #upcoming img,
 #call img{
-	margin-bottom: 2em;
-	width: 90%;
+	width: 100%;
 	display: block;
-
+}
+.image-border{
+	border: 1px solid gray;
 }
 /* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
 #skiptocontent a{
@@ -377,64 +378,90 @@ a:focus img{
 		max-height: 432px;
 	}
 }
-/* Carousel caption */
-.carousel .carousel-item .carousel-caption a{
-	text-decoration: underline;
-	background-color: rgba(0, 0, 0, 0.65); /*color*/
+/* Carousel caption (also regular images) */
+.carousel .carousel-item .carousel-caption,
+.image-caption{
+	text-align: center;
+	line-height: 1.2em;
+	padding: 0;
+	right: 0;
+	left: 0;
+	bottom: .4em;
+	position: absolute;
 }
-.carousel .carousel-item .carousel-caption a{
+@media only screen and (min-width: 480px){
+	.carousel .carousel-item .carousel-caption,
+	.image-caption{
+		line-height: 1.6em;
+		bottom: .5em;
+	}
+}
+@media only screen and (min-width: 768px){
+	.carousel .carousel-item .carousel-caption,
+	.image-caption{
+		right: .5em;
+		left: unset;
+		bottom: .5em;
+	}
+}
+.carousel .carousel-item .carousel-caption h3,
+.image-caption h3{
+	font-size: 16px;
+	font-family: 'noto_serifregular';
+	font-weight: 300;
+	padding: 0;
+	margin: 0;
+	display: inline-block;
+}
+@media only screen and (min-width: 320px){
+	.carousel .carousel-item .carousel-caption h3,
+	.image-caption h3{
+		line-height: inherit;
+	}
+}
+.carousel .carousel-item .carousel-caption h3 a,
+.image-caption h3 a{
+	font-size: .75em;
+}
+@media only screen and (min-width: 768px){ 
+	.carousel .carousel-item .carousel-caption h3 a,
+	.image-caption h3 a{
+		font-size: .9em;
+	}
+}
+.carousel .carousel-item .carousel-caption a,
+.image-caption a{
+	text-decoration: underline;
+	color: #fff;
+	background-color: rgba(0, 0, 0, 0.65); /*color*/
 	border: 2px solid transparent;
 	border-radius: 5px;
 	margin: 0;
-	padding: 0 6px;
+	padding: 1px 6px;
 	display: inline-block;
 }
 .carousel .carousel-item .carousel-caption a:hover,
-.carousel .carousel-item .carousel-caption a:focus{
+.carousel .carousel-item .carousel-caption a:focus,
+.image-caption a:hover,
+.image-caption a:focus{
 	background-color: #1157AC; /*color*/
 	margin: 0;
 }
-.carousel .carousel-item .carousel-caption a:focus{
+.carousel .carousel-item .carousel-caption a:focus,
+.image-caption a:focus{
 	border-color: #1157AC; /*color*/
 	box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
 	-webkit-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
     -moz-box-shadow: inset 0px 0px 0px 2px #fff; /*color*/
 }
-.carousel .carousel-item .carousel-caption h3{
-	font-size: .8em;
-	font-family: 'noto_serifregular';
-	font-weight: 300;
-	font-style: normal;
-	text-align: unset;
-}
-@media only screen and (min-width: 320px){
-	.carousel .carousel-item .carousel-caption h3{
-		font-size: inherit;
-		line-height: inherit;
-	}
-}
-.carousel .carousel-item .carousel-caption h3 a{
-	font-size: .9em;
-	color: #fff; /*color*/
-	text-align: center;
-}
-.carousel .carousel-item .carousel-caption{
-	text-align: center;
-	line-height: 1.2em;
-	padding: 20px 0;
-	right: 6px;
-	left: 6px;
-	bottom: -25px;
-	position: absolute;
-}
-@media only screen and (min-width: 480px){
-	.carousel .carousel-item .carousel-caption{
-		line-height: 1.6em;
-	}
+/* image caption */
+.image-wrapper{
+	position: relative;
+	margin: 0 auto 2em auto;
 }
 @media only screen and (min-width: 768px){
-	.carousel .carousel-item .carousel-caption{
-		left: unset;
+	.image-wrapper{
+		width: 90%;
 	}
 }
 /* Shared CSS for Pause, Next and Previous Slide Controls */
@@ -579,20 +606,46 @@ ul{
 		padding-left: 2.4em;
 	}
 }
-.announcement ol{
+/********/
+
+
+.main-menu ol{
 	text-align: center;
 	list-style: none;
-	margin: 0 0 2em 0;
 	padding: 0;
-	display: block;
+	display: inline-flex;
+	/* display: inline-grid;
+	grid-template-columns: repeat(1, 1fr); */
 }
-.announcement li{
+@media (min-width: 320px){
+	.main-menu ol {
+	  /* grid-template-columns: repeat(1, 1fr); */
+	}
+  }
+@media (min-width: 480px){
+	.main-menu ol {
+	  /* grid-template-columns: repeat(3, 1fr); */
+	}
+  }
+@media (min-width: 992px){
+	.main-menu ol {
+	  /* grid-template-columns: repeat(6, 1fr); */
+	}
+}
+.main-menu li{
 	font-size: 1.1em;
-	font-weight: 300;
-	line-height: 2em;
 	margin: 0 1em;
-	display: inline-block;
 }
+nav.main-menu{
+	margin: 0 auto;
+}
+@media (min-width: 992px){
+	nav.main-menu{
+		max-width: 90%;
+}
+
+
+/********/
 #upcoming > ul{
 	list-style: none
 }
@@ -603,6 +656,9 @@ ul{
 #upcoming > ul > li:nth-child(1) > ul > li,
 #upcoming > ul > li:nth-child(3) > ul > li{
 	margin-top: .75em;
+}
+#upcoming > ul > li:nth-child(1) > ul{
+	margin-bottom: 1.5em;
 }
 
 /* Unused Code */
