--- a/css/style-dev.css
+++ b/css/style-dev.css
@@ -67,19 +67,19 @@ article .main{
 }
 @media only screen and (min-width: 480px){
 	article .main{
-		font-size: 1em;
+		font-size: .95em;
 		padding: 0 1.5em 1em 1.5em;
 	}
 }
 @media only screen and (min-width: 768px){
 	article .main{
-		font-size: 1.1em;
+		font-size: 1.05em;
 		padding: 0 2.25em 1em 2.25em;
 	}
 }
 @media only screen and (min-width: 992px){
 	article .main{
-		font-size: 1.2em;
+		font-size: 1.15em;
 		max-width: 36em;
 		display: block !important; /* Tied to overlay */
 	}
