--- a/css/style-dev.css
+++ b/css/style-dev.css
@@ -126,8 +126,6 @@ h2, h3, h4{
 .title{
 	font-weight: bold;
 	text-align: center;
-	line-height: 1.6em;
-	padding-bottom: 0em;
 	overflow-wrap: normal;
 	word-wrap: normal;
 	word-break: normal;
@@ -137,11 +135,6 @@ h2, h3, h4{
 	-moz-hyphens: none;
 	-webkit-hyphens: none;
 	position: relative;
-}
-@media only screen and (min-width: 320px){
-	.title{
-		padding-bottom: .5em
-	}
 }
 @media only screen and (min-width: 992px){
 	.title{
@@ -154,12 +147,8 @@ h2, h3, h4{
 	text-align: center;
 }
 .header-title{
-	padding: .2em .5em;
-}
-@media only screen and (min-width: 320px){
-	.header-title {
-		padding: .2em 0 0 0;
-	}
+	padding: 0;
+	margin: .5em 0 .2em 0;
 }
 .organizers{
 	padding-bottom: 1em;
@@ -548,7 +537,7 @@ hr{
 	border: 0;
 }
 hr.section-divider{
-	margin: 2em 0;
+	margin: 1.2em 0;
 }
 
 
@@ -598,29 +587,23 @@ hr.section-divider{
 	list-style: none;
 	padding: 0;
 	margin: 0;
-	display: inline-flex;
 	box-sizing: border-box;
 	display: inline-grid;
-	grid-template-columns: repeat(1, 1fr);
+	grid-template-columns: auto auto;
 }
-@media (min-width: 320px){
-	.main-menu ol {
-	  grid-template-columns: repeat(1, 1fr);
-	}
-  }
 @media (min-width: 480px){
 	.main-menu ol {
-	  grid-template-columns: repeat(3, 1fr);
+		grid-template-columns: auto auto auto;
 	}
   }
-@media (min-width: 992px){
+@media (min-width: 768px){
 	.main-menu ol {
-	  grid-template-columns: repeat(6, 1fr);
+		grid-template-columns: auto auto auto auto auto auto;
 	}
 }
 .main-menu li{
 	font-size: 1.1em;
-	margin: 0 1em;
+	margin: .5em .5em;
 }
 nav.main-menu{
 	margin: 0 auto;
