--- a/css/style-dev.css
+++ b/css/style-dev.css
@@ -12,10 +12,7 @@ Table of Contents
 ** 1.0. Main CSS **
 1.1. Main Components
 1.1.1. Carousel 
-1.2. Mobile Fixed Nav
-1.3. Navbar
-1.4. Overlay
-1.5. Artifact Gallery
+1.1.2. Scroll to Top Button
 1.6. Lines
 1.7. Formatting
 1.8. Lists
@@ -533,6 +530,49 @@ a:focus img{
 .carousel .controls button:focus rect.border{
 	stroke: white;
 }
+
+/* 1.1.2. Scroll to Top Button */
+
+/* Scroll to top button */
+/* Adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
+#topButton {
+	cursor: pointer;
+	font-size: .75em;
+	color: white;
+	background-color: #1157AC;
+	border: 2px solid transparent;
+	border-radius: 4px;
+	outline: none;
+	padding: 5px;
+	bottom: 118px;
+	right: 20px;
+	position: fixed;
+	z-index: 99;
+	display: none;
+  }
+@media only screen and (min-width: 480px){
+	#topButton {
+		bottom: 90px;
+	}
+}
+@media only screen and (min-width: 768px){
+	#topButton {
+		font-size: .95em;
+		bottom: 66px;
+	}
+}
+@media only screen and (min-width: 992px){
+	#topButton {
+		right: 120px;
+	}
+}
+  #topButton:hover,
+  #topButton:focus {
+	color: #1157AC;
+	background-color: white;
+	font-weight: 600;
+	border: 2px solid #1157AC;
+  }
 
 
 /* 1.6. Lines */
