--- a/css/style-dev.css
+++ b/css/style-dev.css
@@ -54,7 +54,7 @@ body{
 	padding: 0;
 	margin: 0;
 }
-article .main{
+.text-container .main{
 	font-size: 100%;
 	text-align: left;
 	line-height: 1.6em;
@@ -63,19 +63,19 @@ article .main{
 	
 }
 @media only screen and (min-width: 480px){
-	article .main{
+	.text-container .main{
 		font-size: .95em;
 		padding: 0 1.5em 1em 1.5em;
 	}
 }
 @media only screen and (min-width: 768px){
-	article .main{
+	.text-container .main{
 		font-size: 1.05em;
 		padding: 1em 2.25em 1em 2.25em;
 	}
 }
 @media only screen and (min-width: 992px){
-	article .main{
+	.text-container .main{
 		font-size: 1.15em;
 		max-width: 36em;
 		display: block !important; /* Tied to overlay */
